add git deploy and automation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy:ci": "ng deploy  --name='Fatih-esgi' --email='75906474+Fatih-esgi@users.noreply.github.com' --no-silent"
   },
   "private": true,
   "dependencies": {
