--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@angular/service-worker": "~11.2.4",
     "@ionic-super-tabs/angular": "^7.0.8",
     "@ionic/angular": "^5.6.4",
     "@ionic/cli": "^6.13.1",
