--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-super-tabs/angular": "^7.0.8",
     "@ionic/angular": "^5.6.4",
     "@ionic/cli": "^6.13.1",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
